--- a/src/components/Nav.module.scss
+++ b/src/components/Nav.module.scss
@@ -15,13 +15,16 @@
   z-index: 1;
 }
 
-.overlay {
-  display: none;
+.overlay, .hiddenOverlay {
+  display: block;
   position: absolute;
   left: 0;
   top: 0;
   width: 100vw;
   height: 100vh;
+}
+.hiddenOverlay {
+  display: none;
 }
 
 .navi {
@@ -80,7 +83,6 @@
 	box-shadow: none;
 	transform: translateX(-100%); 
   }
-
 }
 
 .menus {
@@ -157,23 +159,26 @@
 }
 
 .dropdown {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   cursor: pointer;
-  margin: 0.5em;
   font-weight: bold;
   font-variant: small-caps;
   background-color: var(--primary-color);
   color: var(--secondary-color);
-  padding: 0.4em 1em;
+  height: 50%;
+  margin-right: 1em;
   @include f.neumorph-primary(f.$d);
   @include f.round;
-  .dropdownMenu {
+  padding: 0.2em 1em;
+  .dropdownMenu, .hiddenDMenu {
 	color: var(--secondary-color);
 	position: absolute;
-	display: none;
 	right: 0;
 	top: 100%;
+	display: block;
 	@include f.neumorph-primary(f.$d);
 	padding: 0;
 	.dropdownItem {
@@ -186,6 +191,9 @@
 	  color: var(--primary-color);
 	  @include f.large-shadow-secondary;
 	}
+  }
+  .hiddenDMenu {
+	display: none;
   }
 }
 
